Avoid page jump when loading images

--- a/internal/pkg/server/static/css/styles.css
+++ b/internal/pkg/server/static/css/styles.css
@@ -65,3 +65,20 @@ body {
     gap: 1rem;
   }
 }
+
+.photo-placeholder {
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.photo-placeholder img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
